fix(icon): icon clipping

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -344,8 +344,8 @@ div[class^="searchBar_"] div[class*="hitFooter"] a:hover {
 }
 
 .menu__link[href*="/fdc/overview"]::before {
-  width: 24px;
-  height: 24px;
+  width: 26px;
+  height: 26px;
   background-size: 26px 26px;
   background-image: url("/img/menu/DATACONNECTOR_light.svg");
 }
@@ -354,8 +354,8 @@ div[class^="searchBar_"] div[class*="hitFooter"] a:hover {
 }
 
 .menu__link[href*="/fassets/overview"]::before {
-  width: 24px;
-  height: 24px;
+  width: 26px;
+  height: 26px;
   background-size: 26px 26px;
   background-image: url("/img/menu/FASSETS_light.svg");
 }
